# ols-mcp-server

./: README.md  mcp-config.json  openapi.json  pyproject.toml
src/ols_mcp_server/: __init__.py  models.py  server.py
